--- a/code.css
+++ b/code.css
@@ -88,6 +88,11 @@ margin: 10px 0;
     margin-bottom: 10px;
     text-align: center;
 }
+.code{
+    color: yellow;
+    text-align: center;
+    font-weight: bolder;
+}
 .media-wrapper{
     text-align: center;
 }
@@ -517,7 +522,7 @@ margin-bottom: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 20px;
 
 }
 .profileimg{
@@ -672,7 +677,7 @@ font-size: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 100px;
+    gap: 10px;
     margin-top: 2rem;
     width: 100%;
     margin: 0 auto;
@@ -729,8 +734,8 @@ font-size: 20px;
     bottom: 10px;
 }
 #metro{
-    width: 60%;
-    margin: 15px auto auto 280px;
+    width: 90%;
+    margin: 12px 15px 12px 15px;
 }
 #metro img{
     width: 100%;
@@ -962,7 +967,7 @@ margin-bottom: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 30px;
 
 }
 .profileimg{
@@ -971,14 +976,14 @@ height: 250px;
 }
 .fullname{
 color: aqua;
-font-size: 35px;
+font-size: 30px;
 margin: 10px 0;
 }
 .who{
     color: aqua;
     font-size: 24px;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     text-align: center;
 }
 .media-wrapper{
@@ -1117,7 +1122,7 @@ font-size: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 100px;
+    gap: 20px;
     margin-top: 2rem;
     width: 100%;
     margin: 0 auto;
@@ -1150,10 +1155,12 @@ font-size: 20px;
 .project-title{
     color: orangered;
     margin-bottom: 10px;
-    font-size: 17px;
+    font-size: 20px;
+    text-align: center;
 }
 .project-brief{
     font-size: 17px;
+    width: 90%;
 }
 .project-links{
     display: flex;
@@ -1174,8 +1181,8 @@ font-size: 20px;
     bottom: 10px;
 }
 #metro{
-    width: 60%;
-    margin: 15px auto auto 280px;
+    width: 90%;
+    margin: 10px 12px 10px 12px;
 }
 #metro img{
     width: 100%;
@@ -1188,7 +1195,7 @@ font-size: 20px;
 .project-title{
     color: orangered;
     margin-bottom: 10px;
-    font-size: 17px;
+    font-size: 20px;
 }
 .project-brief{
     font-size: 17px;
@@ -1375,10 +1382,7 @@ margin-bottom: 10px;
       
         color: #000;
     }
-    .navlink.wrapper{
-
-    }
-   /*  .headercon-wrapper{
+   .headercon-wrapper{
         position: relative;
         z-index: 1;
         display: flex;
@@ -1389,7 +1393,7 @@ margin-bottom: 10px;
         margin-top: 7px;
         width: 90%;
 
-    } */
+    }
 /* style navlink  */
 
 .navlink{
